welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:2: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (speed<=60 && isBirthday=false) {
                      ^caughtSpeeding:17: error: type mismatch;
 found   : Unit
 required: Int
	else if (speed>85 && isBirthday==true) {
             ^